llvm-toolchain-10 (1:10.0.0~+rc2-3) unstable; urgency=medium

  * Disable libfuzzer on x86
    https://bugs.llvm.org/show_bug.cgi?id=43677
    FTBFS otherwise
  * Add a libclang-cpp10-dev package (needed to unbreak the cmake)
    https://bugs.llvm.org/show_bug.cgi?id=42432

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Mar 2020 20:59:25 +0100

llvm-toolchain-10 (1:10.0.0~+rc2-2) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Bring back libfuzzer, for some reasons I don't remember
    I disabled it:
    https://bugs.llvm.org/show_bug.cgi?id=41956
  * Silent the polly tests in debian/qualify-clang.sh
    clang (LLVM option parsing): Unknown command line argument
    '-polly'.  Try: 'clang (LLVM option parsing) --help'

  [ Aurelien Jarno ]
  * Also disable hwasan_symbolize on mipsel mips64el riscv64

  [ Gianfranco Costamagna ]
  * Patch to convert old python3 cgi method into the new html one

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 29 Feb 2020 14:04:22 +0100

llvm-toolchain-10 (1:10.0.0~+rc2-1) unstable; urgency=medium

  * Upload to unstable to get ci.debian.net testing
  * Also disable hwasan_symbolize on armel s390x powerpc ppc64

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 16 Feb 2020 14:50:53 +0100

llvm-toolchain-10 (1:10.0.0~+rc2-1~exp1) experimental; urgency=medium

  * Second RC release
    - Should fix the s390x issue (reported upstream)
    (Closes: #950900)
  * Do not try to install hwasan_symbolize on armhf ppc64el
    as it isn't built
    (Closes: #950899)

  [ Samuel Thibault ]
  * hurd/hurd-cxx-paths.diff: Fix patch so it can be applied.
  * clang-tools-X.Y.install.in: Do not try to install hwasan_symbolize on
    hurd-any.

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 06 Feb 2020 10:37:39 +0100

llvm-toolchain-10 (1:10.0.0~+rc1-1~exp1) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * fix lldb-10 -P path print (Closes: #945445)
  * Fix lldb python installation path and symlinks