@@ -1,1 +1,1 @@
-usr/lib/llvm-@LLVM_VERSION@/lib/libclang-cpp.so usr/lib/llvm-@LLVM_VERSION@/lib/libclang-cpp@LLVM_VERSION@.so
+usr/lib/llvm-@LLVM_VERSION@/lib/libclang-cpp.so
